# GD-Daily-Weekly-Levels

./: README.md  pyproject.toml
data/: levels.csv
notebooks/: 00_get_data.ipynb
