[project]
name = "gd-daily-weekly-levels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel==6.30.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
